[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aesp"
authors = [{name = "Chenglong Qin", email = "clqin@foxmail.com"}]

maintainers = [{name = "Chenglong Qin", email = "clqin@foxmail.com"}]

description = "aesp(Adaptive Evolutionary Structure Predictor) is a crystal structure prediction tool written in Python."

readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
keywords = ["CSP", 'DL']
classifiers = ["Programming Language :: Python :: 3"]
dependencies = ["pyxtal", "pymatgen", "ase", "dpgen2", "art", "dpdispatcher", "dscribe"]
dynamic = ["version"]

[project.urls]
Documentation = "aesp.rtfd.io"
Homepage = "https://pymatsci.top"

[project.scripts]
aesp = "aesp.entrypoint.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.dynamic]
version = {attr = "aesp.__version__"}

